[gd_scene load_steps=78 format=3 uid="uid://cnphch8ulvp8p"]

[ext_resource type="Script" uid="uid://cdtladigjlq1e" path="res://Player/player.gd" id="1_jrvh6"]
[ext_resource type="Script" uid="uid://c4edr6f2t0ucp" path="res://Player/PlayerMovementData.gd" id="2_45c3k"]
[ext_resource type="Shader" uid="uid://d0afeb0n0gktt" path="res://Player/player.gdshader" id="3_apopc"]
[ext_resource type="Texture2D" uid="uid://dhyl08uc123t4" path="res://Assets/Generic/shadow.png" id="3_i4o1l"]
[ext_resource type="PackedScene" uid="uid://cp15t5spntif" path="res://Modules/shield_module.tscn" id="4_apopc"]
[ext_resource type="PackedScene" uid="uid://ccg26bgjvfxse" path="res://Modules/health_module.tscn" id="4_od3ui"]
[ext_resource type="PackedScene" uid="uid://bvgf768latsby" path="res://Modules/hurt_box.tscn" id="5_00tjw"]
[ext_resource type="PackedScene" uid="uid://of34ornvyat4" path="res://StateMachine/state_machine.tscn" id="7_o2wf0"]
[ext_resource type="PackedScene" uid="uid://d2j5ajyhwefl0" path="res://StateMachine/PlayerStates/idle_player_state.tscn" id="8_s28x5"]
[ext_resource type="PackedScene" uid="uid://eb32dl45t2pd" path="res://StateMachine/PlayerStates/walking_player_state.tscn" id="9_40r42"]
[ext_resource type="PackedScene" uid="uid://csydnauyf82ok" path="res://StateMachine/PlayerStates/dying_player_state.tscn" id="10_x3vf3"]
[ext_resource type="PackedScene" uid="uid://ki22sv3sp00b" path="res://StateMachine/PlayerStates/using_card_player_state.tscn" id="12_c6x0f"]
[ext_resource type="Texture2D" uid="uid://bjf44a0ij0aa0" path="res://Assets/Player/idle1.png" id="12_p5o4e"]
[ext_resource type="Texture2D" uid="uid://drimhm0u68mkc" path="res://Assets/Player/idle2.png" id="13_gu6f8"]
[ext_resource type="Texture2D" uid="uid://dy7tbwwg1wfoc" path="res://Assets/Player/walking_down1.png" id="13_n471f"]
[ext_resource type="Texture2D" uid="uid://b1otawggdcr7y" path="res://Assets/Player/walking_down2.png" id="14_7emwf"]
[ext_resource type="Texture2D" uid="uid://cuovhb0bjuyk2" path="res://Assets/Player/walking_sideways1.png" id="14_pisgm"]
[ext_resource type="Texture2D" uid="uid://djt6gdt13irj2" path="res://Assets/Player/walking_sideways2.png" id="15_b1ygp"]
[ext_resource type="Texture2D" uid="uid://ce60yvfr1iauh" path="res://Assets/Player/walking_down3.png" id="15_hshwv"]
[ext_resource type="Texture2D" uid="uid://b4k8vbcw2awjs" path="res://Assets/Player/walking_down4.png" id="16_gpjlu"]
[ext_resource type="Texture2D" uid="uid://wuv2mqrnet27" path="res://Assets/Player/walking_sideways3.png" id="16_o28un"]
[ext_resource type="Texture2D" uid="uid://degx5ar6ph8ki" path="res://Assets/Player/walking_sideways4.png" id="17_n471f"]
[ext_resource type="Texture2D" uid="uid://d2fg8v2ja02nj" path="res://Assets/Player/walking_up1.png" id="21_8mwp6"]
[ext_resource type="Texture2D" uid="uid://cebk4gj8lp280" path="res://Assets/Player/walking_up2.png" id="22_qemgg"]
[ext_resource type="Texture2D" uid="uid://d06sqsjdbyons" path="res://Assets/Player/walking_up3.png" id="23_8viyr"]
[ext_resource type="Texture2D" uid="uid://cdtxgaiofvox1" path="res://Assets/Player/walking_up4.png" id="24_sm0op"]
[ext_resource type="Texture2D" uid="uid://c38khhyruwh1i" path="res://Assets/Player/dying1.png" id="25_m0h3t"]
[ext_resource type="Texture2D" uid="uid://b4nt4d4jx32af" path="res://Assets/Player/dying2.png" id="26_i4o1l"]
[ext_resource type="Texture2D" uid="uid://1l30n6b5q56q" path="res://Assets/Player/dying3.png" id="27_j2n6q"]
[ext_resource type="Texture2D" uid="uid://odgw0ecgb6dr" path="res://Assets/Player/dying4.png" id="28_c6x0f"]
[ext_resource type="Texture2D" uid="uid://dm4a88cth4sd7" path="res://Assets/Player/dying5.png" id="29_jp1hh"]
[ext_resource type="Texture2D" uid="uid://cru4eee3oa048" path="res://Assets/Player/dying6.png" id="30_qs4pp"]
[ext_resource type="Texture2D" uid="uid://bymok054i44g6" path="res://Assets/Player/dying7.png" id="31_iyprq"]
[ext_resource type="Texture2D" uid="uid://4bstngi8gjjo" path="res://Assets/Player/dying8.png" id="32_f4lon"]
[ext_resource type="Texture2D" uid="uid://4fvqjdhcl4hk" path="res://Assets/Player/using_card1.png" id="35_jp1hh"]
[ext_resource type="Texture2D" uid="uid://dj4rdpe5o7mlc" path="res://Assets/Player/using_card2.png" id="36_qs4pp"]
[ext_resource type="AudioStream" uid="uid://ba8w3nn6x7xhx" path="res://Assets/SFX/Player/Footsteps/0.ogg" id="37_1l10g"]
[ext_resource type="AudioStream" uid="uid://di2cqkqapylo2" path="res://Assets/SFX/Player/Footsteps/1.ogg" id="38_6rl0i"]
[ext_resource type="AudioStream" uid="uid://b3b4qnyxncbiy" path="res://Assets/SFX/Player/Footsteps/2.ogg" id="39_7x5p2"]
[ext_resource type="AudioStream" uid="uid://c45cr45s1bgxt" path="res://Assets/SFX/Player/Footsteps/3.ogg" id="40_6eb1q"]
[ext_resource type="AudioStream" uid="uid://b735u6ynhg6t2" path="res://Assets/SFX/Player/Footsteps/4.ogg" id="41_wvbyc"]
[ext_resource type="AudioStream" uid="uid://d3cwl4v5fv06l" path="res://Assets/SFX/Player/Footsteps/5.ogg" id="42_gvnt1"]
[ext_resource type="AudioStream" uid="uid://j27yn6uqtavy" path="res://Assets/SFX/Player/Footsteps/6.ogg" id="43_1kmt7"]
[ext_resource type="AudioStream" uid="uid://ygc4mw2ufue4" path="res://Assets/SFX/Player/Footsteps/7.ogg" id="44_c4i3b"]
[ext_resource type="AudioStream" uid="uid://bly61rhjojqy2" path="res://Assets/SFX/Player/Footsteps/8.ogg" id="45_uvbbp"]
[ext_resource type="AudioStream" uid="uid://brr8mlumxbeku" path="res://Assets/SFX/Player/Footsteps/9.ogg" id="46_7v2uk"]
[ext_resource type="AudioStream" uid="uid://b83o3gv1ygjh2" path="res://Assets/SFX/Player/Hurt/413173__micahlg__male_hurt12.ogg" id="47_kdg72"]
[ext_resource type="AudioStream" uid="uid://chcmvogi7c65u" path="res://Assets/SFX/Player/Hurt/413174__micahlg__male_hurt11.ogg" id="48_qpoj2"]
[ext_resource type="AudioStream" uid="uid://di3gmw8bid6lb" path="res://Assets/SFX/Player/Hurt/413183__micahlg__male_hurt7.ogg" id="49_3e3ym"]
[ext_resource type="AudioStream" uid="uid://c7h4dbe2knmus" path="res://Assets/SFX/Player/Hurt/413184__micahlg__male_hurt6.ogg" id="50_gxi5p"]
[ext_resource type="AudioStream" uid="uid://cgpda86bbm4br" path="res://Assets/SFX/Player/Hurt/413185__micahlg__male_hurt8.ogg" id="51_yxu6j"]
[ext_resource type="AudioStream" uid="uid://b5k280hn6a3nc" path="res://Assets/SFX/Player/Hurt/413186__micahlg__male_hurt9.ogg" id="52_mdkl3"]
[ext_resource type="AudioStream" uid="uid://crcjfyoqvlpp" path="res://Assets/SFX/Player/Hurt/413175__micahlg__male_hurt10.ogg" id="53_68syb"]
[ext_resource type="AudioStream" uid="uid://dvs0235cg8o60" path="res://Assets/SFX/Player/Hurt/413176__micahlg__male_hurt1.ogg" id="54_x0uyb"]
[ext_resource type="AudioStream" uid="uid://b8lv7udoctlov" path="res://Assets/SFX/Player/Hurt/413177__micahlg__male_hurt3.ogg" id="55_f8nak"]
[ext_resource type="AudioStream" uid="uid://bpiolkcakabhs" path="res://Assets/SFX/Player/Hurt/413178__micahlg__male_hurt2.ogg" id="56_pqfba"]
[ext_resource type="AudioStream" uid="uid://d2prvxxrdwv8j" path="res://Assets/SFX/Player/Hurt/413179__micahlg__male_hurt14.ogg" id="57_lgaa7"]
[ext_resource type="AudioStream" uid="uid://0ctbxeo8d6f4" path="res://Assets/SFX/Player/Hurt/413180__micahlg__male_hurt13.ogg" id="58_lfyh2"]
[ext_resource type="AudioStream" uid="uid://c0l0y00m18nvd" path="res://Assets/SFX/Player/Hurt/413181__micahlg__male_hurt5.ogg" id="59_soeee"]
[ext_resource type="AudioStream" uid="uid://bjw7l6m01c3bb" path="res://Assets/SFX/Player/Hurt/413182__micahlg__male_hurt4.ogg" id="60_o5r0w"]
[ext_resource type="AudioStream" uid="uid://cuuwdcnvlte61" path="res://Assets/SFX/Player/Dying/245646__unfa__cartoon-pop-distorted.ogg" id="61_qpoj2"]

[sub_resource type="Resource" id="Resource_d6c5j"]
script = ExtResource("2_45c3k")
speed = 500
acceleration = 4000
friction = 1500

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j2n6q"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_c6x0f"]
noise = SubResource("FastNoiseLite_j2n6q")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5htga"]
shader = ExtResource("3_apopc")
shader_parameter/active = false
shader_parameter/cloaked = false
shader_parameter/cloak_noise = SubResource("NoiseTexture2D_c6x0f")
shader_parameter/cloak_strength = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsdr6"]
size = Vector2(64, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pisgm"]
resource_local_to_scene = true
size = Vector2(53, 119)

[sub_resource type="Animation" id="Animation_dkpta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_p5o4e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 68)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Footsteps:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Death:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ynux"]
resource_name = "dying"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_p5o4e"), ExtResource("25_m0h3t"), ExtResource("26_i4o1l"), ExtResource("27_j2n6q"), ExtResource("28_c6x0f"), ExtResource("29_jp1hh"), ExtResource("30_qs4pp"), ExtResource("31_iyprq"), ExtResource("32_f4lon")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 68), Vector2(0, 68), Vector2(22.19, 68)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/Death:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("12_p5o4e"), ExtResource("13_gu6f8")]
}

[sub_resource type="Animation" id="Animation_i4o1l"]
resource_name = "using_card"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("35_jp1hh"), ExtResource("36_qs4pp")]
}

[sub_resource type="Animation" id="Animation_apopc"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("13_n471f"), ExtResource("14_7emwf"), ExtResource("15_hshwv"), ExtResource("16_gpjlu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/Footsteps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_p5o4e"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("14_pisgm"), ExtResource("15_b1ygp"), ExtResource("16_o28un"), ExtResource("17_n471f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/Footsteps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("21_8mwp6"), ExtResource("22_qemgg"), ExtResource("23_8viyr"), ExtResource("24_sm0op")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/Footsteps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3vf3"]
_data = {
&"RESET": SubResource("Animation_dkpta"),
&"dying": SubResource("Animation_8ynux"),
&"idle": SubResource("Animation_vtle1"),
&"using_card": SubResource("Animation_i4o1l"),
&"walk_down": SubResource("Animation_apopc"),
&"walk_sideways": SubResource("Animation_p5o4e"),
&"walk_up": SubResource("Animation_x3vf3")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m6nl3"]
random_pitch = 1.15
random_volume_offset_db = 0.5
streams_count = 10
stream_0/stream = ExtResource("37_1l10g")
stream_1/stream = ExtResource("38_6rl0i")
stream_2/stream = ExtResource("39_7x5p2")
stream_3/stream = ExtResource("40_6eb1q")
stream_4/stream = ExtResource("41_wvbyc")
stream_5/stream = ExtResource("42_gvnt1")
stream_6/stream = ExtResource("43_1kmt7")
stream_7/stream = ExtResource("44_c4i3b")
stream_8/stream = ExtResource("45_uvbbp")
stream_9/stream = ExtResource("46_7v2uk")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qns6m"]
streams_count = 14
stream_0/stream = ExtResource("47_kdg72")
stream_1/stream = ExtResource("48_qpoj2")
stream_2/stream = ExtResource("53_68syb")
stream_3/stream = ExtResource("54_x0uyb")
stream_4/stream = ExtResource("55_f8nak")
stream_5/stream = ExtResource("56_pqfba")
stream_6/stream = ExtResource("57_lgaa7")
stream_7/stream = ExtResource("58_lfyh2")
stream_8/stream = ExtResource("59_soeee")
stream_9/stream = ExtResource("60_o5r0w")
stream_10/stream = ExtResource("49_3e3ym")
stream_11/stream = ExtResource("50_gxi5p")
stream_12/stream = ExtResource("51_yxu6j")
stream_13/stream = ExtResource("52_mdkl3")

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 24
floor_constant_speed = true
floor_snap_length = 16.0
script = ExtResource("1_jrvh6")
movement = SubResource("Resource_d6c5j")

[node name="CardActions" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 68)
scale = Vector2(1, 0.505)
texture = ExtResource("3_i4o1l")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5htga")
position = Vector2(1, 0)
scale = Vector2(1.111, 1.111)
texture = ExtResource("12_p5o4e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, 2)
shape = SubResource("RectangleShape2D_bsdr6")

[node name="HealthModule" parent="." instance=ExtResource("4_od3ui")]
offset_left = -63.0
offset_top = -77.0
offset_right = -59.0
offset_bottom = -77.0

[node name="ShieldModule" parent="HealthModule" instance=ExtResource("4_apopc")]
layout_mode = 2
current_shield = 1

[node name="HurtBox" parent="." instance=ExtResource("5_00tjw")]
visible = false
hurtbox_type = "Player"
enabled = true

[node name="CollisionShape2D" parent="HurtBox/Area2D" index="0"]
position = Vector2(4.5, 3.5)
shape = SubResource("RectangleShape2D_pisgm")

[node name="StateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("7_o2wf0")]
starting_state = NodePath("IdlePlayerMovementState")

[node name="IdlePlayerMovementState" parent="StateMachine" node_paths=PackedStringArray("walking_player_state", "dying_player_state", "using_card_player_state") instance=ExtResource("8_s28x5")]
walking_player_state = NodePath("../WalkingPlayerMovementState")
dying_player_state = NodePath("../DyingPlayerState")
using_card_player_state = NodePath("../UsingCardPlayerState")

[node name="WalkingPlayerMovementState" parent="StateMachine" node_paths=PackedStringArray("idle_player_state", "dying_player_state", "using_card_player_state") instance=ExtResource("9_40r42")]
idle_player_state = NodePath("../IdlePlayerMovementState")
dying_player_state = NodePath("../DyingPlayerState")
using_card_player_state = NodePath("../UsingCardPlayerState")

[node name="UsingCardPlayerState" parent="StateMachine" node_paths=PackedStringArray("idle_player_state", "dying_player_state") instance=ExtResource("12_c6x0f")]
idle_player_state = NodePath("../IdlePlayerMovementState")
dying_player_state = NodePath("../DyingPlayerState")

[node name="DyingPlayerState" parent="StateMachine" instance=ExtResource("10_x3vf3")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3vf3")
}

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="SFX" type="Node2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_m6nl3")
volume_db = -7.0
bus = &"SFX"

[node name="Damaged" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_qns6m")
volume_db = 8.0
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("61_qpoj2")
bus = &"SFX"

[node name="Shielded" type="AudioStreamPlayer2D" parent="SFX"]
bus = &"SFX"

[connection signal="took_damage" from="HealthModule" to="." method="_on_health_module_took_damage"]
[connection signal="took_damage" from="HealthModule/ShieldModule" to="." method="_on_shield_module_took_damage"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]

[editable path="HurtBox"]
